[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "django-cors-headers>=4.6.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 120
indent-width = 4
ignore = ["F405", "F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = false
docstring-code-line-length = "dynamic"
